Fix 'More Filters' button margin on mobile

--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -29,6 +29,7 @@
 
     .moreFilters {
         display: initial;
+        margin-right: 0;
 
         button {
             padding: 5px;
